; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_clinat.c_print_client_nat_list.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_clinat.c_print_client_nat_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client_nat_option_list = type { i32, %struct.client_nat_entry* }
%struct.client_nat_entry = type { i32, i32, i32, i32 }
%struct.gc_arena = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"*** CNAT list\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"  CNAT[%d] t=%d %s/%s/%s\00", align 1
@IA_NET_ORDER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_client_nat_list(%struct.client_nat_option_list* %0, i32 %1) #0 {
  %3 = alloca %struct.client_nat_option_list*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.gc_arena, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.client_nat_entry*, align 8
  store %struct.client_nat_option_list* %0, %struct.client_nat_option_list** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = call i32 (...) @gc_new()
  %9 = getelementptr inbounds %struct.gc_arena, %struct.gc_arena* %5, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 (i32, i8*, ...) @msg(i32 %10, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.client_nat_option_list*, %struct.client_nat_option_list** %3, align 8
  %13 = icmp ne %struct.client_nat_option_list* %12, null
  br i1 %13, label %14, label %53

14:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %15

15:                                               ; preds = %49, %14
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.client_nat_option_list*, %struct.client_nat_option_list** %3, align 8
  %18 = getelementptr inbounds %struct.client_nat_option_list, %struct.client_nat_option_list* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp slt i32 %16, %19
  br i1 %20, label %21, label %52

21:                                               ; preds = %15
  %22 = load %struct.client_nat_option_list*, %struct.client_nat_option_list** %3, align 8
  %23 = getelementptr inbounds %struct.client_nat_option_list, %struct.client_nat_option_list* %22, i32 0, i32 1
  %24 = load %struct.client_nat_entry*, %struct.client_nat_entry** %23, align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.client_nat_entry, %struct.client_nat_entry* %24, i64 %26
  store %struct.client_nat_entry* %27, %struct.client_nat_entry** %7, align 8
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load %struct.client_nat_entry*, %struct.client_nat_entry** %7, align 8
  %31 = getelementptr inbounds %struct.client_nat_entry, %struct.client_nat_entry* %30, i32 0, i32 3
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.client_nat_entry*, %struct.client_nat_entry** %7, align 8
  %34 = getelementptr inbounds %struct.client_nat_entry, %struct.client_nat_entry* %33, i32 0, i32 2
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @IA_NET_ORDER, align 4
  %37 = call i32 @print_in_addr_t(i32 %35, i32 %36, %struct.gc_arena* %5)
  %38 = load %struct.client_nat_entry*, %struct.client_nat_entry** %7, align 8
  %39 = getelementptr inbounds %struct.client_nat_entry, %struct.client_nat_entry* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* @IA_NET_ORDER, align 4
  %42 = call i32 @print_in_addr_t(i32 %40, i32 %41, %struct.gc_arena* %5)
  %43 = load %struct.client_nat_entry*, %struct.client_nat_entry** %7, align 8
  %44 = getelementptr inbounds %struct.client_nat_entry, %struct.client_nat_entry* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* @IA_NET_ORDER, align 4
  %47 = call i32 @print_in_addr_t(i32 %45, i32 %46, %struct.gc_arena* %5)
  %48 = call i32 (i32, i8*, ...) @msg(i32 %28, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %29, i32 %32, i32 %37, i32 %42, i32 %47)
  br label %49

49:                                               ; preds = %21
  %50 = load i32, i32* %6, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %6, align 4
  br label %15

52:                                               ; preds = %15
  br label %53

53:                                               ; preds = %52, %2
  %54 = call i32 @gc_free(%struct.gc_arena* %5)
  ret void
}

declare dso_local i32 @gc_new(...) #1

declare dso_local i32 @msg(i32, i8*, ...) #1

declare dso_local i32 @print_in_addr_t(i32, i32, %struct.gc_arena*) #1

declare dso_local i32 @gc_free(%struct.gc_arena*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
